Added Jacoco to Pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
         <scope>test</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
+<dependency>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.14</version>
+</dependency>
+
 
 </dependencies>
 
@@ -58,6 +65,13 @@
                 </includes>
                 </configuration>
         </plugin>
+
+        <plugin>
+  <groupId>org.jacoco</groupId>
+  <artifactId>jacoco-maven-plugin</artifactId>
+  <version>0.8.15-SNAPSHOT</version>
+</plugin>
+
     </plugins>
 </build>
 
