--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,12 @@
         <scope>test</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
 <dependency>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>0.8.14</version>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>5.20.0</version>
 </dependency>
+ 
 
 
 </dependencies>
@@ -69,7 +69,48 @@
         <plugin>
   <groupId>org.jacoco</groupId>
   <artifactId>jacoco-maven-plugin</artifactId>
-  <version>0.8.15-SNAPSHOT</version>
+  <version>0.8.14</version>
+  <executions>
+<execution>
+<id>default-prepare-agent</id>
+<goals>
+<goal>prepare-agent</goal>
+</goals>
+</execution>
+<execution>
+<id>default-report</id>
+<goals>
+<goal>report</goal>
+</goals>
+</execution>
+<execution>
+<id>report</id>
+<phase>test</phase>
+<goals>
+    <goal>report</goal>
+</goals>
+</execution>
+<execution>
+<id>default-check</id>
+<goals>
+<goal>check</goal>
+</goals>
+<configuration>
+<rules>
+<rule>
+<element>BUNDLE</element>
+<limits>
+<limit>
+<counter>COMPLEXITY</counter>
+<value>COVEREDRATIO</value>
+<minimum>0.60</minimum>
+</limit>
+</limits>
+</rule>
+</rules>
+</configuration>
+</execution>
+</executions>
 </plugin>
 
     </plugins>
