--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,20 @@
    <build>
     <plugins>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
+           <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.5.4</version> 
             <configuration>
-            <useFile>false</useFile>
-            <rerunFailingTestsCount>0</rerunFailingTestsCount>
+                <useFile>false</useFile>
+                <reportNameSuffix>NONE</reportNameSuffix> 
+    <consoleOutputReporterEnabled>true</consoleOutputReporterEnabled> 
+    <statelessTestsetInfoReporter>true</statelessTestsetInfoReporter>
                 <includes>
                     <include>**/AllUnitTest.java</include>
                 </includes>
+                <excludes>
+                    <exclude>**/*Test.java</exclude>
+                </excludes>
                 </configuration>
         </plugin>
 
